<resources>
    <string name="app_name">App Detail Fee</string>
    <string name="username_email_or_mobile_number">Username, email or mobile number</string>
    <string name="password">Password</string>
    <string name="logo_app">Logo app</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="google">Google</string>
    <string name="create_new_account">Create New Account</string>
    <string name="logo_google">logoGoogle</string>
    <string name="hide_password">Hide password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign Up</string>
    <string name="successful">Successful</string>
    <string name="spending">Spending</string>
    <string name="income">Income</string>
    <string name="statistics">Statistics</string>
    <string name="log_out">Log out</string>
</resources>