<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.LogInFragment">

    <EditText
        android:id="@+id/edtUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="135dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:background="@drawable/edt_custom"
        android:ems="10"
        android:hint="@string/username_email_or_mobile_number"
        android:inputType="text"
        android:padding="15dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/edtPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:autofillHints=""
        android:background="@drawable/edt_custom"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btnLoginFragment"
        app:layout_constraintEnd_toEndOf="@+id/edtUsername"
        app:layout_constraintHorizontal_bias="0.733"
        app:layout_constraintStart_toStartOf="@+id/edtUsername" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLoginFragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginBottom="44dp"
        android:background="@drawable/btn_custom"
        android:text="@string/log_in"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="268dp"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/btnHidePassword"
        android:layout_width="22dp"
        android:layout_height="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="13dp"
        android:contentDescription="@string/hide_password"
        app:layout_constraintBottom_toBottomOf="@+id/edtPassword"
        app:layout_constraintEnd_toEndOf="@+id/edtPassword"
        app:layout_constraintTop_toTopOf="@+id/edtPassword"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/icons8_hide_password" />

</androidx.constraintlayout.widget.ConstraintLayout>